welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:198: error: illegal start of simple expression
	}
        ^